--- a/src/app/components/tools/sidebar-menu-porteur/sidebar-menu-porteur.component.css
+++ b/src/app/components/tools/sidebar-menu-porteur/sidebar-menu-porteur.component.css
@@ -8,6 +8,7 @@
     min-height: 560px;
     grid-template-rows: 45% 10% 45%;
     box-shadow: 0px 0px 10px 0 rgba(0, 0, 0, 0.3);
+    z-index: 99999;
 }
 
 .menus-text, p {
